--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 body {
+  display: flex;
+  flex-direction: column;
   font: 15px/1.5 Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
+  height: 100%;
   background-color: #f4f4f4;
+  overflow: hidden;
 }
 
 /* Global */
@@ -14,7 +18,7 @@ body {
 .container {
   width: 80%;
   margin: auto;
-  overflow: hidden;
+  flex: 1 0 auto;
 }
 ul {
   margin: 0;
@@ -166,6 +170,10 @@ footer {
   color: #ffffff;
   background-color: #32cd32;
   text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 /* Media Queries */
