--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   height: 100%;
   background-color: #f4f4f4;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* Global */
@@ -25,11 +25,12 @@ ul {
   padding: 0;
 }
 .button1 {
-  height: 38px;
+  height: 2rem;
   background: #32cd32;
   border: 0;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   color: #ffffff;
+  cursor: pointer;
 }
 .dark {
   padding: 15px;
@@ -111,7 +112,7 @@ header a:hover {
 }
 
 #newsletter input[type='email'] {
-  padding: 4px;
+  padding: 1rem;
   height: 25px;
   width: 250px;
 }
@@ -149,8 +150,9 @@ aside#sidebar {
 }
 aside#sidebar .quote input,
 aside#sidebar .quote textarea {
-  width: 90%;
-  padding: 5px;
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 /* Services */
@@ -170,7 +172,7 @@ footer {
   color: #ffffff;
   background-color: #32cd32;
   text-align: center;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
@@ -204,6 +206,12 @@ footer {
   }
   #newsletter form input[type='email'] {
     width: 100%;
-    margin-bottom: 5px;
+    margin-bottom: 1rem;
+  }
+  footer {
+    position: relative;
+  }
+  #fixed-footer {
+    position: fixed;
   }
 }
