--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@ header {
   padding-top: 10px;
   min-height: 70px;
   border-bottom: #32cd32 3px solid;
+  position: sticky;
+  top: 0;
 }
 header a {
   color: #ffffff;
@@ -195,6 +197,10 @@ footer {
   }
   header {
     padding-bottom: 20px;
+    display: flex;
+  }
+  #branding {
+    margin-bottom: 1rem;
   }
   #showcase h1 {
     margin-top: 40%;
@@ -209,9 +215,6 @@ footer {
     margin-bottom: 1rem;
   }
   footer {
-    position: relative;
-  }
-  #fixed-footer {
-    position: fixed;
+    position: sticky;
   }
 }
